--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,6 @@ defaultPerformanceBaselines=8.1-commit-e739dfad
 
 # Disable Test Retry in GE plugin as long as Test Retry Gradle plugin is in use
 systemProp.gradle.enterprise.testretry.enabled=false
+
+# Skip dependency analysis for tests
+systemProp.dependency.analysis.test.analysis=false
