Avoid JavaPluginConvention in some palces
Turns out we use the JavaPluginConvention in a lot of tests. When attempting to enable deprecations
for the convention, I realized just how many usages we have. I removed some instances until I got tired
of it. This is what I accomplished.

--- a/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/eclipse/EclipseIntegrationTest/canCreateAndDeleteMetaData/webAppJava6/build.gradle
+++ b/subprojects/ide/src/integTest/resources/org/gradle/plugins/ide/eclipse/EclipseIntegrationTest/canCreateAndDeleteMetaData/webAppJava6/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'war'
 
-sourceCompatibility = 6
+java {
+    sourceCompatibility = 6
+}
 
 dependencies {
     implementation project(":common")
