--- a/subprojects/docs/src/snippets/mavenMigration/basic/groovy/build.gradle
+++ b/subprojects/docs/src/snippets/mavenMigration/basic/groovy/build.gradle
@@ -2,9 +2,10 @@ plugins {
     id 'java-library'
     id 'checkstyle'
 }
-
-sourceCompatibility = '1.8'
-targetCompatibility = '1.8'
+java {
+    sourceCompatibility = '1.8'
+    targetCompatibility = '1.8'
+}
 version = '1.2.1'
 
 ext {
