--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,10 @@ systemProp.gradle.enterprise.testretry.enabled=false
 
 # Skip dependency analysis for tests
 systemProp.dependency.analysis.test.analysis=false
+
+# List of project that still have dependency analysis warnings
+unmigratedProjects=antlr,bootstrap,build-cache,build-cache-base,build-cache-http,build-cache-packaging,build-events,build-init,build-profile,code-quality,composite-builds,configuration-cache,core,dependency-management,\
+  diagnostics,ear,enterprise,enterprise-logging,ide,ide-native,installation-beacon,internal-integ-testing,internal-performance-testing,internal-testing,ivy,jacoco,kotlin-dsl,kotlin-dsl-plugins,kotlin-dsl-provider-plugins,\
+  kotlin-dsl-tooling-builders,kotlin-dsl-tooling-models,language-groovy,language-java,language-jvm,language-native,launcher,maven,platform-base,platform-jvm,platform-native,plugin-development,plugin-use,plugins,problems,\
+  publish,reporting,resources-gcs,resources-http,resources-s3,resources-sftp,scala,security,signing,testing-base,testing-junit-platform,testing-jvm,testing-jvm-infrastructure,testing-native,test-kit,tooling-api,\
+  tooling-api-builders,tooling-native,version-control,worker-services,workers,wrapper
